# dais

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  coding-standards.md  git-workflow.md  issue-pr-autopilot.md  issue-pr-autopilot.plan.prompt.md  issue-pr-autopilot.prompt.md  issue-pr-autopilot.worker.prompt.md  meta-principles.md  scope-manifests.yaml  subagent-strategy.md  system.config.yaml  tool-usage.md
.github/workflows/: dex-ci.yml
agents/phase-1/: derive-agent.md
agents/phase-2/: manifest-agent.md
baselines/: finops-baseline.md  gdpr-baseline.md  shared-baseline.md
commands/: review-staged-diff.md
data/: complexity-router.md  dark-patterns.yaml  dpia-triggers.yaml  pii-classifier.yaml  severity-rubric.yaml  trigger-keywords.yaml
scripts/: pre-push-claude-review.sh
tests/audit/: LICENSE  local-paths.md.example  multi-agent-comms.md  (+4 more)
tests/bootstrap/devexnet/: .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
tests/bootstrap/devexnet/.github/workflows/: ci.yml
tests/bootstrap/devexnet/docs/architecture/: ADR-0001-stack-choices.md  ADR-0003-git-worktree-strategy.md
tests/bootstrap/devexnet/docs/finops/: token-routing-strategy.md
tests/bootstrap/devexnet/scripts/: validate_loomreed_light.sh
tests/bootstrap/devexnet/spec/: architecture.md  devex-integration.md
tests/bootstrap/devexnet/src/: main.py
tests/bootstrap/devexnet/tasks/: task-001.md  task-002.md
validators/: post-execution-reviewer.md  pre-execution-validator.py
(+68 files in other folders)
